--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-select": "^5.0.0",
